fixed overlapping bug on card photo

--- a/src/components/PostCards/PostCard/CardInfo/CardInfo.module.css
+++ b/src/components/PostCards/PostCard/CardInfo/CardInfo.module.css
@@ -3,4 +3,6 @@
     flex-flow: column;
     gap:10px;
     margin-top: 5px;
+    position: relative;
+    z-index: -1;
 }
