--- a/src/components/PostCards/PostCard/CardInfo/CategoryTag/CategoryTag.module.css
+++ b/src/components/PostCards/PostCard/CardInfo/CategoryTag/CategoryTag.module.css
@@ -8,6 +8,4 @@
     box-sizing: border-box;
     border-radius: 5px;
     margin: 0;
-    position: relative;
-    z-index: -1;
 }
